--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Folio</title>
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&display=swap" rel="stylesheet">
@@ -24,8 +25,8 @@
         </div>
         <nav>
           <ul class="nav-list row">
-            <li class="nav-item"><a href="#" class="nav-link downb">creative demos</a></li>
-            <li class="nav-item"><a href="#" class="nav-link downb">pages</a></li>
+            <li class="nav-item"><a href="#" class="nav-link downb">creative demos<i class="fas fa-chevron-down"></i></a></li>
+            <li class="nav-item"><a href="#" class="nav-link downb">pages<i class="fas fa-chevron-down"></i></a></li>
             <li class="nav-item"><a href="#" class="nav-link">about me.</a></li>
             <li class="nav-item"><a href="#" class="nav-link">contact.</a></li>
             <li class="nav-item"><a href="#" class="nav-link">support.</a></li>
@@ -40,7 +41,7 @@
 
       <div class="container">
         <div class="dark-div-btn">
-          <button class="dark-btn"></button>
+          <button class="dark-btn"><i class="fas fa-chevron-right"></i></button>
         </div>
         <div class="dark-div row">
 
@@ -58,7 +59,7 @@
             <div class="col-6 hero-texts">
               <p class="hero-text">ILLUSTRATOR, GRAPHIC DESIGNER, TRAVELER</p>
               <h2 class="hero-title">I design digital crafts for clients.</h2>
-              <a href="#" class="hero-btn btn">explore works</a>
+              <a href="#" class="hero-btn btn">explore works</p> <i class="fal fa-long-arrow-right"></i></a>
             </div>
 
             <div class="col-6 hero-bg">
