--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="container">
         <div class="hero">
           <div class="row">
-            <div class="col-6 hero-texts">
+            <div class=" hero-texts">
               <p class="hero-text">ILLUSTRATOR, GRAPHIC DESIGNER, TRAVELER</p>
               <h2 class="hero-title">I design digital crafts for clients.</h2>
               <a href="#" class="hero-btn btn">explore works</p> <i class="fal fa-long-arrow-right"></i></a>
